--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-regular-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@tailwindcss/vite": "^4.0.14",
         "localforage": "^1.10.0",
         "match-sorter": "^8.0.0",
