--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-fast-marquee": "^1.6.5",
         "react-router-dom": "^7.3.0",
         "react-scroll": "^1.9.3",
+        "react-spinners": "^0.17.0",
         "sort-by": "^1.2.0",
         "tailwindcss": "^4.0.14"
     },
