--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "deploy": "vite build && gh-pages --dotfiles -d dist",
         "lint": "eslint .",
         "preview": "vite preview"
     },
